--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@ language: python
 services:
   - docker
 env:
-  # - UBUNTU_VER=14.04 - problems with atari-py
+  - UBUNTU_VER=14.04 - problems with atari-py
   - UBUNTU_VER=16.04
   - UBUNTU_VER=18.04
 
 install: "" # so travis doesn't do pip install requirements.txt
 script:
-  - docker build -f test.dockerfile.${UBUNTU_VER} -t gym-test --build-arg MUJOCO_KEY=$MUJOCO_KEY .
-  - docker run -e MUJOCO_KEY=$MUJOCO_KEY gym-test tox
+  - docker build -f test.dockerfile.${UBUNTU_VER} -t gym-test .
+  - docker run gym-test tox
 
 deploy:
     provider: pypi
